--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
     <title>MailLibrary - easy remote control of mail server.</title>
 
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
 
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body style="margin: 40px;">
 <div class="navbar navbar-fixed-top navbar-inverse">
