--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <li><a href="#4"><i class="icon-chevron-right"></i>Operating with mailboxes</a></li>
                 <li><a href="#5"><i class="icon-chevron-right"></i>Filtering selection</a></li>
                 <li><a href="#6"><i class="icon-chevron-right"></i>Finally, working with mails</a></li>
-                <!--<li><a href="#7"><i class="icon-chevron-right"></i>7 </a></li>
-                <li><a href="#8"><i class="icon-chevron-right"></i>8 </a></li>
-                <li><a href="#9"><i class="icon-chevron-right"></i>9 </a></li>
-                <li><a href="#10"><i class="icon-chevron-right"></i>10 </a></li>
-                <li><a href="#11"><i class="icon-chevron-right"></i>11 </a></li>-->
+                <li><a href="#7"><i class="icon-chevron-right"></i>Attachments</a></li>
+	            <!--<li><a href="#8"><i class="icon-chevron-right"></i>8 </a></li>
+				<li><a href="#9"><i class="icon-chevron-right"></i>9 </a></li>
+				<li><a href="#10"><i class="icon-chevron-right"></i>10 </a></li>
+				<li><a href="#11"><i class="icon-chevron-right"></i>11 </a></li>-->
             </ul>
         </div>
         <div class="span9" style="margin-top: -60px;">
@@ -50,7 +50,7 @@
 
             <a href="#1"><h2>What is MailLibrary?</h2></a>
             <a name="2"></a>
-            <b>MailLibrary</b> is <a href="http://php.net">PHP</a> library built on <a href="http://nette.org">Nette Framework</a>,
+            <b>MailLibrary</b> is <a href="http://php.net">PHP</a> library,
             that can be used for downloading mails from mail server.
 
             <a href="#2"><h2>Features</h2></a>
@@ -73,7 +73,7 @@
                 create, rename or delete mailboxes as you want.</dd>
 
                 <dt>Filtering</dt>
-                <dd>If you know Nette Framework, you know that there is very nice database layer. Providing fluent interface,
+                <dd>If you know <a href="http://nette.org">Nette Framework</a>, you know that there is very nice database layer. Providing fluent interface,
                 you can easily filter rows. I have inspired myself from that and created a very similar-looking layer, that
                 allows you to filter mails like rows in database. No emails are fetched till you request for them.</dd>
 
@@ -88,7 +88,7 @@
 
                 <dt>Extendable</dt>
                 <a name='3'></a>
-                <dd>If you want, you can write your own driver, that for example downloads mails from database and synchnorizes
+                <dd>If you want, you can write your own driver, that for example downloads mails from database and synchronizes
                 them with mail server. Every function, that manipulates with emails, is located in driver.</dd>
             </dl>
 
@@ -98,8 +98,8 @@
             <code>greeny\MailLibrary\Drivers\IDriver</code> interface.
             In this tutorial, i have chosen <code>greeny\MailLibrary\Drivers\ImapDriver</code>.
             <br><br>
-            <code>ImapDriver</code> requires parameters <code>$username</code>, <code>$password</code>, <code>$host</code>,
-            <code>$port</code> and optional parameter <code>$ssl</code>, which, if set to <code>TRUE</code>, secures our connection.
+            <code>ImapDriver</code> requires parameters <code>$username</code>, <code>$password</code>, <code>$host</code> and
+            optional parameters <code>$port</code> and <code>$ssl</code>, which, if set to <code>TRUE</code>, secures our connection.
 
             <br><br><pre>
 use greeny\MailLibrary\Drivers\ImapDriver;
@@ -117,10 +117,10 @@ $connection = new Connection($driver);</pre>
 
             And that's all, we have set it up correctly!<br>
 
-            <div class="alert alert-warning"><a name="4"></a><b>Warning!</b> Do not call Driver classes directly, every it's class can and should be called using
+            <div class="alert alert-warning"><a name="4"></a><b>Warning!</b> Do not call Driver classes directly, every it's method can and should be called using
             other classes.</div>
 
-            <a name="4" href="#4"><h2>Operating with mailboxes</h2></a>
+            <a href="#4"><h2>Operating with mailboxes</h2></a>
 
             If you don't know, what mailbox is, it doesn't matter. For standard user, mailbox is like folder to which are mails
             filtered. Examples of mailboxes are Inbox, Spam, Sent, etc.<br><br>
@@ -128,76 +128,79 @@ $connection = new Connection($driver);</pre>
             With connection already set, we can easily manipulate with mailboxes.
             <ul>
                 <li><code>$connection->getMailboxes()</code> returns associative array name => mailbox,</li>
-                <li><code>$mailbox = $connection->getMailbox('Inbox')</code> returns mailbox named 'Inbox',</li>
+                <li><code>$mailbox = $connection->getMailbox('INBOX')</code> returns mailbox named 'INBOX',</li>
                 <li><code>$mailbox = $connection->createMailbox('My mailbox');</code> creates mailbox 'My mailbox',</li>
-                <li><code>$mailbox->rename('My epic mailbox');</code> renames mailbox to 'My epic mailbox',</li>
-                <li><code>$mailbox->delete();</code><a name="5"></a> deletes mailbox.</li>
+                <li><code>$connection->renameMailbox('My Mailbox', 'My epic mailbox');</code> renames mailbox to 'My epic mailbox',</li>
+                <li><code>$connection->deleteMailbox('My epic mailbox');</code><a name="5"></a> deletes mailbox.</li>
             </ul>
 
             <a href="#5"><h2>Filtering selection</h2></a>
 
             As mentioned above, filtering mails is almost the same as filtering rows in <code>Nette\Database</code>.<br>
             We just must have <code>$mailbox</code> variable, that contains required mailbox (instance of
-            <code>greeny\MailLibrary\Selection</code> - selection is filtered list of mails, default filtering is by mailbox).<br><br>
-            We can get this variable from connection from method <code>getMailboxes()</code> (returned as associative array
-            mailbox name => selection) or from method <code>getMailbox($name)</code>.<br><br>
-            <div class='alert alert-info'>
-                <b>Info:</b> <code>Selection</code> is also returned by methods <code>createMailbox()</code> and <code>renameMailbox()</code>.
-            </div><br>
+            <code>greeny\MailLibrary\Mailbox</code>).<br>We must now create a selection from it - selection is list of mails in one mailbox,
+	        which can be filtered, sorted and paginated.<br>
+	        <code>$selection = $mailbox->getMails();</code> Now we have a <code>$selection</code> variable.<br><br>
+
             Now we can filter mails from this mailbox:
             <pre>
 use greeny\MailLibrary\Mail;
 
-$mailbox
-    ->where("from", 'mom@example.com')
-    ->where("subject", 'Hello son!')
-    ->order("received", 'DESC')
+$selection
+    ->where(Mail::FROM, 'mom@example.com')
+    ->where(Mail::SUBJECT, 'Hello son!')
     ->limit(10)
     ->offset(5);
             </pre>
             This code will:
             <ul>
                 <li>find all mails from 'mom@example.com' with subject 'Hello son!'</li>
-                <li>orders mails by received time, descending</li>
                 <li>fetch only first 10 mails with offset 5 (like in SQL)</li>
             </ul>
-            <a name="6"></a>Now the <code>$mailbox</code> contains all these filters, limits, offsets, etc. In next paragraph,
+            <a name="6"></a>Now the <code>$selection</code> variable contains all these filters, limits, offsets, etc. In next paragraph,
             we will get mails from it.
 
             <a href="#6"><h2>Finally, working with mails</h2></a>
 
-            You now have <code>$mailbox</code> variable, possibly filtered (but it's not required) and you want to get mails from it.<br>
+            You now have <code>$selection</code> variable, possibly filtered (but it's not required) and you want to get mails from it.<br>
 
             The most intuitive way is to use foreach:
             <pre>
-foreach($mailbox as $mail) {
+foreach($selection as $mail) {
     // do something with $mail
 }</pre>
 
-            If you want, you can also call <code>$mails = $mailbox->getAllMails()</code>, which returns array where keys are IDs and
+            If you want, you can also call <code>$mails = $selection->fetchAll()</code>, which returns array where keys are IDs and
             values are mails.
             <br><br>
-            The third way to get mails is to use <code>$mail = $mailbox->getMailById($id)</code>, that returns mail with that ID.<br>
-            And where to get IDs? <code>$ids = $mailbox->getMailIds()</code> solves it (returns array).
-            <br><br>
+            The third way to get mails is to use <code>$mail = $selection[$id]</code>, that returns mail with that ID.<br><br>
             With <code>$mail</code> (instance of <code>greeny\MailLibrary\Mail</code>) we can now access all mail's properties:
             <ul>
                 <li><code>$mail->getHeader('X-Request-From')</code> gets header</li>
-                <li><code>$mail->getFormattedHeader('xRequestFrom')</code> does the same</li>
-                <li><code>$mail->xRequestFrom</code> uses the same formatting as <code>getFormattedHeader()</code></li>
+                <li><code>$mail->getHeader('xRequestFrom')</code> does the same</li>
+                <li><code>$mail->xRequestFrom</code> does again the same</li>
                 <li><code>$mail->getBody()</code> returns HTML body (if not available, returns text body)</li>
                 <li><code>$mail->getHtmlBody()</code> and <code>$mail->getTextBody()</code> does what they say</li>
                 <li><code>$mail->getAttachments()</code> - gets array of attachments (will be mentioned later)</li>
             </ul>
 
+	        <div class="alert alert-info">
+		        <b>Info:</b> The headers with 'contact list' (from, to, cc, bcc, ...) are returned as <code>greeny\MailLibrary\ContactList</code>,
+		        which can be iterated using foreach, converted to string or can return contacts as array (<code>$mail->to->getContacts()</code>).
+	        </div>
+
             You can also modify mail's parent mailbox:
             <ul>
-                <li><code>$mail->moveTo($name)</code> or <code>$mail->copyTo($name)</code>, where $name is name of mailbox
+                <li><code>$mail->move($name)</code> or <code>$mail->copy($name)</code>, where $name is name of mailbox
                 (you can get it using <code>$mailbox->getName()</code>)</li>
                 <li><code>$mail->delete()</code> deletes mail.</li>
             </ul>
 
-            Another feature is setting flags to mail. There are 5 flags, that can be set (each to TRUE or FALSE):
+	        <div class="alert alert-danger">
+		        <b>Warning!</b> Do not forget to call <code>$connection->flush()</code> every time after you have moved or deleted mail.
+	        </div>
+
+            Another feature is setting and getting flags of mail. There are 5 flags, that can be TRUE or FALSE:
             <ul>
                 <li><code>Mail::FLAG_SEEN</code></li>
                 <li><code>Mail::FLAG_FLAGGED</code></li>
@@ -206,24 +209,37 @@ foreach($mailbox as $mail) {
                 <li><code>Mail::FLAG_DRAFT</code></li>
             </ul>
 
-            For setting flags, use method <code>$mail->setFlags($flags, $value)</code>.<br>
-            This sets all flags in array <code>$flags</code> to <code>$value</code> (TRUE/FALSE). <code>$flags</code>
-            can be also only one flag, then you don't have to create an array for it.
-            <br><br>
-            Example: <pre>$mail->setFlags(array(Mail::FLAG_SEEN, Mail::FLAG_DRAFT), TRUE)</pre> sets flags SEEN and DRAFT to TRUE.
+            For setting flags, use method <code>$mail->setFlags(array $flags)</code>.<br>
+            The array <code>$flags</code> shall be an associative array with keys as some of the constants
+	        mentioned above and values TRUE or FALSE.<br><br>
+	        Example: <pre>$mail->setFlags(array(Mail::FLAG_SEEN => TRUE, Mail::FLAG_DRAFT => FALSE))</pre> sets flag SEEN to TRUE and DRAFT to FALSE.<br><br>
 
-            <br><br>
-            <div class="alert alert-warning">
-                <b>Warning!</b> This tutorial isn't finished yet, because there are parts of MailLibrary, that I am working on now.
-            </div>
+	        <a name="7"></a>For getting flags, use <code>$mail->getFlags()</code>, which returns an associative array with keys again the constants and values TRUE or FALSE<br><br>
 
-            <!--<a name="7"></a>
+	        <div class="alert alert-danger">
+		        <b>Warning!</b> Do not forget to call <code>$connection->flush()</code> every time after you have modified flags.
+	        </div>
+
+	        <a href="#7"><h2>Attachments</h2></a>
+
+	        As always, MailLibrary provides easy access to attachments of mail.<br><br>
+
+	        <code>$mail->getAttachments()</code> returns array of <code>greeny\MailLibrary\Attachment</code>, a class which contains some basic methods:
+	        <ul>
+		        <li><code>getName()</code> - returns original name of attachment</li>
+		        <li><code>getContent()</code> - returns content of the file</li>
+		        <li><code>saveAs($filename)</code> - saves attachment to local file</li>
+	        </ul>
+
+	        Simple, easy to use, same as the rest of MailLibrary.
+
+	        <!--
             <a name="8"></a>
             <a name="9"></a>
             <a name="10"></a>
             <a name="11"></a>-->
             <div class="footer">
-                <br><div class="nav nav-list"><ul><li class="divider"></li></ul></div><br>
+                <hr>
                 Created by <a href="http://github.com/greeny">@greeny</a>, first version of
                 <a href="http://github.com/greeny/MailLibrary">MailLibrary</a>
                 released 3.3.2013 under MIT licence.<br><br>
