--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>MailLibrary - easy remote control of mail server.</title>
+    <title>php-mail-client/Client - easy remote control of mail server.</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <div class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="http://github.com/greeny/MailLibrary">MailLibrary on GitHub</a>
+            <a class="brand" href="http://github.com/php-mail-client/Client">php-mail-client/Client on GitHub</a>
 
             <ul class="nav">
                 <li class="divider-vertical"></li>
@@ -31,7 +31,7 @@
     <div class="row-fluid">
         <div class="span3">
             <ul style="position: fixed;" class="span3 left-menu nav nav-tabs nav-stacked">
-                <li><a href="#1"><i class="icon-chevron-right"></i>What is MailLibrary?</a></li>
+                <li><a href="#1"><i class="icon-chevron-right"></i>What is php-mail-client/Client?</a></li>
                 <li><a href="#2"><i class="icon-chevron-right"></i>Features</a></li>
                 <li><a href="#3"><i class="icon-chevron-right"></i>First steps</a></li>
                 <li><a href="#4"><i class="icon-chevron-right"></i>Operating with mailboxes</a></li>
@@ -48,9 +48,9 @@
             <a name="1">Heading</a>
             <br><br><br>
 
-            <a href="#1"><h2>What is MailLibrary?</h2></a>
+            <a href="#1"><h2>What is php-mail-client/Client?</h2></a>
             <a name="2"></a>
-            <b>MailLibrary</b> is <a href="http://php.net">PHP</a> library,
+            <b>php-mail-client/Client</b> is <a href="http://php.net">PHP</a> library,
             that can be used for downloading mails from mail server.
 
             <a href="#2"><h2>Features</h2></a>
@@ -61,7 +61,7 @@
                     use POP3 or plain sockets.</dd>
 
                 <dt>Connecting</dt>
-                <dd>You don't have to connect manually or check if connected, MailLibrary solves everything for you.</dd>
+                <dd>You don't have to connect manually or check if connected, php-mail-client/Client solves everything for you.</dd>
 
                 <dt>Lazy emails</dt>
                 <dd>Don't be afraid that your mail server will be spammed with tons of commands and you will receive gigabytes of
@@ -69,7 +69,7 @@
 
                 <dt>Mailboxes</dt>
                 <dd>Operating with mailboxes in plain PHP is hard, when you are for example downloading mails from two mailboxes,
-                you must remember to switch between them every time. MailLibrary switches mailboxes automatically. You can also easily
+                you must remember to switch between them every time. php-mail-client/Client switches mailboxes automatically. You can also easily
                 create, rename or delete mailboxes as you want.</dd>
 
                 <dt>Filtering</dt>
@@ -79,11 +79,11 @@
 
                 <dt>Mails</dt>
                 <dd>If you ever worked with mails, you know, that parsing email body and headers is very robust code. You
-                must find, what encoding is used, decode it, convert charset to UTF-8, etc, etc. With MailLibrary, everything
+                must find, what encoding is used, decode it, convert charset to UTF-8, etc, etc. With php-mail-client/Client, everything
                 like this collapse in only one line to get header and one line to get body.</dd>
 
                 <dt>Attachments</dt>
-                <dd>Getting attachment and saving it to server directory is with MailLibrary as easy as pie. With only one line
+                <dd>Getting attachment and saving it to server directory is with php-mail-client/Client as easy as pie. With only one line
                 of code you gain full control of attachments.</dd>
 
                 <dt>Extendable</dt>
